<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.calendate.calendate.ForgotPassword">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/forgot_password_email_address"
        android:inputType="textEmailAddress"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_below="@+id/etTitle"
        android:layout_centerHorizontal="true"
        android:paddingTop="19dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_send"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:paddingTop="18dp" />

    <TextView
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_password_title"
        android:textColor="#37474f"
        android:gravity="center"/>

</RelativeLayout>

